force-app/main/default/objects/User_Access_Managment__c/User_Access_Managment__c.object-meta.xml
<CustomObject>
    <description>Object to Request user access to salesforce environments</description>
    <label>User Access Managment</label>
    <nameField>
        <displayFormat>UAR - {0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Access Managments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>