force-app/main/default/objects/User_Access_Managment__c/fields/Access_Details__c.field-meta.xml
<CustomField>
    <fullName>Access_Details__c</fullName>
    <inlineHelpText>Provide Access details Like Profile Name , Role , permission set details or user details with whom u would like to Mimic Your access</inlineHelpText>
    <label>Access Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>