force-app/main/default/objects/User_Access_Managment__c/fields/Access_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Access_Period_End__c</fullName>
    <label>Access Period End</label>
    <type>Date</type>
</CustomField>