force-app/main/default/objects/User_Access_Managment__c/fields/Addition_of_Permission__c.field-meta.xml
<CustomField>
    <fullName>Addition_of_Permission__c</fullName>
    <label>Addition of Permission</label>
    <type>TextArea</type>
</CustomField>