force-app/main/default/objects/User_Access_Managment__c/fields/Business_Justification__c.field-meta.xml
<CustomField>
    <fullName>Business_Justification__c</fullName>
    <label>Business Justification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>