force-app/main/default/objects/User_Access_Managment__c/fields/DevOps__c.field-meta.xml
<CustomField>
    <fullName>DevOps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DevOps</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Access_Managments1</relationshipName>
    <type>Lookup</type>
</CustomField>