force-app/main/default/objects/User_Access_Managment__c/fields/Divsion__c.field-meta.xml
<CustomField>
    <fullName>Divsion__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>QE</fullName>
            </value>
            <value>
                <fullName>Product/Business</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>