force-app/main/default/objects/User_Access_Managment__c/fields/End_of_Day__c.field-meta.xml
<CustomField>
    <fullName>End_of_Day__c</fullName>
    <label>End of Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time</valueSetName>
    </valueSet>
</CustomField>