force-app/main/default/objects/User_Access_Managment__c/fields/Environments__c.field-meta.xml
<CustomField>
    <fullName>Environments__c</fullName>
    <label>Environments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSC Dev1</fullName>
            </value>
            <value>
                <fullName>BRO</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>FSC INT</fullName>
            </value>
            <value>
                <fullName>FSC QA</fullName>
            </value>
            <value>
                <fullName>FSC UAT</fullName>
            </value>
            <value>
                <fullName>FSC PREPROD</fullName>
            </value>
            <value>
                <fullName>POC DEV1</fullName>
            </value>
            <value>
                <fullName>BRP POC</fullName>
                <isActive>false</isActive>
                <label>BRP POC</label>
            </value>
            <value>
                <fullName>EDJ GOV</fullName>
                <isActive>false</isActive>
                <label>EDJ GOV</label>
            </value>
            <value>
                <fullName>FSC SCALETEST</fullName>
                <isActive>false</isActive>
                <label>FSC SCALETEST</label>
            </value>
            <value>
                <fullName>Pioneer POC</fullName>
                <isActive>false</isActive>
                <label>Pioneer POC</label>
            </value>
            <value>
                <fullName>Training Org</fullName>
                <isActive>false</isActive>
                <label>Training Org</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>