force-app/main/default/objects/User_Access_Managment__c/fields/Federation_ID__c.field-meta.xml
<CustomField>
    <fullName>Federation_ID__c</fullName>
    <label>Federation ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>