force-app/main/default/objects/User_Access_Managment__c/fields/isApproved__c.field-meta.xml
<CustomField>
    <fullName>isApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isApproved</label>
    <type>Checkbox</type>
</CustomField>