force-app/main/default/objects/User_Access_Managment__c/fields/Need_Admin_Access__c.field-meta.xml
<CustomField>
    <fullName>Need_Admin_Access__c</fullName>
    <formula>Persona_New__r.IsSensitive__c = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Need Admin Access</label>
    <type>Checkbox</type>
</CustomField>