force-app/main/default/objects/User_Access_Managment__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <inlineHelpText>Comprising permission set, profile, permission set group, and territory</inlineHelpText>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Advisor (FA)</fullName>
            </value>
            <value>
                <fullName>Branch Office Administrator (BOA)</fullName>
            </value>
            <value>
                <fullName>Home Office 1</fullName>
            </value>
            <value>
                <fullName>Legal/Field Supervision</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>HQIS</fullName>
                <isActive>false</isActive>
                <label>HQIS</label>
            </value>
            <value>
                <fullName>Home Office 2</fullName>
                <isActive>false</isActive>
                <label>Home Office 2</label>
            </value>
            <value>
                <fullName>System Admin Read Only</fullName>
                <isActive>false</isActive>
                <label>System Admin Read Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>