force-app/main/default/objects/User_Access_Managment__c/fields/Persona_New__c.field-meta.xml
<CustomField>
    <fullName>Persona_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Persona</label>
    <referenceTo>cf_Persona__c</referenceTo>
    <relationshipLabel>User Access Managments</relationshipLabel>
    <relationshipName>User_Access_Managments</relationshipName>
    <type>Lookup</type>
</CustomField>