force-app/main/default/objects/User_Access_Managment__c/fields/Product_Team__c.field-meta.xml
<CustomField>
    <fullName>Product_Team__c</fullName>
    <label>Product Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>