force-app/main/default/objects/User_Access_Managment__c/fields/Reference_User__c.field-meta.xml
<CustomField>
    <fullName>Reference_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Access_Managments</relationshipName>
    <type>Lookup</type>
</CustomField>