force-app/main/default/objects/User_Access_Managment__c/fields/Removal_of_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Removal_of_Permissions__c</fullName>
    <label>Removal of Permissions</label>
    <type>TextArea</type>
</CustomField>