force-app/main/default/objects/User_Access_Managment__c/fields/Requested_Environment__c.field-meta.xml
<CustomField>
    <fullName>Requested_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Environment</label>
    <referenceTo>SFRelease__Org__c</referenceTo>
    <relationshipLabel>User Access Managments</relationshipLabel>
    <relationshipName>User_Access_Managments</relationshipName>
    <type>Lookup</type>
</CustomField>