force-app/main/default/objects/User_Access_Managment__c/fields/Start_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>Start_Of_Day__c</fullName>
    <defaultValue>TEXT(TIMEVALUE(&apos;01:00&apos;))</defaultValue>
    <label>Start Of Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time</valueSetName>
    </valueSet>
</CustomField>