force-app/main/default/objects/User_Access_Managment__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Time Zone fo the user</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(GMT+05:30) India Standard Time (Asia/Kolkata)</fullName>
            </value>
            <value>
                <fullName>(GMT-03:30) Newfoundland Standard Time (America/St_Johns)</fullName>
            </value>
            <value>
                <fullName>(GMT-02:30) Newfoundland Daylight Time (America/St_Johns)</fullName>
            </value>
            <value>
                <fullName>(GMT-04:00) Atlantic Standard Time (America/Halifax)</fullName>
            </value>
            <value>
                <fullName>(GMT-03:00) Atlantic Daylight Time (America/Halifax)</fullName>
            </value>
            <value>
                <fullName>(GMT-05:00) Eastern Standard Time (America/Detroit)</fullName>
            </value>
            <value>
                <fullName>(GMT-04:00) Eastern Daylight Time (America/Detroit)</fullName>
            </value>
            <value>
                <fullName>(GMT-05:00) Eastern Standard Time (America/Toronto)</fullName>
            </value>
            <value>
                <fullName>(GMT-04:00) Eastern Daylight Time (America/Toronto)</fullName>
            </value>
            <value>
                <fullName>(GMT-06:00) Central Standard Time (America/Chicago)</fullName>
            </value>
            <value>
                <fullName>(GMT-05:00) Central Daylight Time (America/Chicago)</fullName>
            </value>
            <value>
                <fullName>(GMT-06:00) Central Standard Time (America/Winnipeg)</fullName>
            </value>
            <value>
                <fullName>(GMT-05:00) Central Daylight Time (America/Winnipeg)</fullName>
            </value>
            <value>
                <fullName>(GMT-07:00) Mountain Standard Time (America/Denver)</fullName>
            </value>
            <value>
                <fullName>(GMT-06:00) Mountain Daylight Time (America/Denver)</fullName>
            </value>
            <value>
                <fullName>(GMT-07:00) Mountain Standard Time (America/Edmonton)</fullName>
            </value>
            <value>
                <fullName>(GMT-06:00) Mountain Daylight Time (America/Edmonton)</fullName>
            </value>
            <value>
                <fullName>(GMT-08:00) Pacific Standard Time (America/Los_Angeles)</fullName>
            </value>
            <value>
                <fullName>(GMT-07:00) Pacific Daylight Time (America/Los_Angeles)</fullName>
            </value>
            <value>
                <fullName>(GMT-08:00) Pacific Standard Time (America/Vancouver)</fullName>
            </value>
            <value>
                <fullName>(GMT-07:00) Pacific Daylight Time (America/Vancouver)</fullName>
            </value>
            <value>
                <fullName>(GMT-09:00) Alaska Standard Time (America/Anchorage)</fullName>
            </value>
            <value>
                <fullName>(GMT-08:00) Alaska Daylight Time (America/Anchorage)</fullName>
            </value>
            <value>
                <fullName>(GMT-10:00) Hawaii-Aleutian Standard Time (America/Adak)</fullName>
            </value>
            <value>
                <fullName>(GMT-09:00) Hawaii-Aleutian Daylight Time (America/Adak)</fullName>
            </value>
            <value>
                <fullName>(GMT-10:00) Hawaii-Aleutian Standard Time (Pacific/Honolulu)</fullName>
            </value>
            <value>
                <fullName>(GMT-10:00) Hawaii-Aleutian Standard Time (Pacific/Johnston)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>