force-app/main/default/objects/User_Access_Managment__c/listViews/UAM_User_Access_Managment.listView-meta.xml
<ListView>
    <fullName>UAM_User_Access_Managment</fullName>
    <filterScope>Queue</filterScope>
    <label>UAM</label>
    <queue>UAM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>